Fixed the screen-gradiant issue, and the WeCan{Code}IT misalignment

--- a/css/layout.css
+++ b/css/layout.css
@@ -5,11 +5,16 @@
 
 .body {
   margin: 0;
-  padding: 0;
-  height: 100%;
+  /* padding: 0;
+  height: 95vh; */
 }
 
 .container {
+  margin: 0;
+  /* margin-top: -15px; */
+  padding: 0;
+  height: 100vh;
+  width: 100vh;
   /* display: grid;
   grid-template-rows: 45px fr 45px;
   margin: 0;
@@ -45,7 +50,7 @@
 .headline {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  margin-top: 60px;
+  margin-top: 45px;
   margin-bottom: 0;
   display: flex;
   flex-direction: row;
@@ -97,8 +102,6 @@
 
 .article {
   margin: 1rem auto;
-  display: flex;
-  justify-content: center;
   max-width: 600px;
 }
 
@@ -112,9 +115,16 @@
 .listofskills {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 30px;
   margin: 3rem auto;
   width: 60%;
+}
+
+.listofskills > ul {
+  text-align: center;
+}
+.listofskills > ul > li {
+  text-align: left;
+  margin-left: 30%;
 }
 
 .resumedownload {
@@ -148,6 +158,7 @@
 }
 
 .footlinks a {
+  /* font-size: 1.2rem; */
   margin-left: 20px;
   padding: 10px;
 }
